crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_v2__test__multiple_matches_sequential.snap
---
source: crates/forge_tool/src/patch/apply_v2.rs
expression: actual
---
<!-- INITIAL -->foo bar foo
<!-- REPLACEMENTS -->
<!-- SEARCH -->foo
<!-- REPLACE -->baz
<!-- FINAL -->baz bar foo
