crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_v2__test__nested_replacements.snap
---
source: crates/forge_tool/src/patch/apply_v2.rs
expression: actual
---
<!-- INITIAL -->outer inner outer
<!-- REPLACEMENTS -->
<!-- SEARCH -->outer inner outer
<!-- REPLACE -->modified inner
<!-- SEARCH -->inner
<!-- REPLACE -->content
<!-- FINAL -->modified content
