crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_v2__test__preserve_indentation.snap
---
source: crates/forge_tool/src/patch/apply_v2.rs
expression: actual
---
<!-- INITIAL -->    indented
        more indented
<!-- REPLACEMENTS -->
<!-- SEARCH -->indented
<!-- REPLACE -->text
<!-- FINAL -->    text
        more indented
