crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_v2__test__sequential_non_overlapping_replacements.snap
---
source: crates/forge_tool/src/patch/apply_v2.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->abcdef
<!-- REPLACEMENTS -->
<!-- SEARCH -->abc
<!-- REPLACE -->123
<!-- SEARCH -->def
<!-- REPLACE -->456
<!-- FINAL -->123456
