crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_v2__test__sequential_replacements_on_identical_text.snap
---
source: crates/forge_tool/src/patch/apply_v2.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->same same same
<!-- REPLACEMENTS -->
<!-- SEARCH -->same
<!-- REPLACE -->different
<!-- SEARCH -->same
<!-- REPLACE -->changed
<!-- FINAL -->different changed same
