crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_v2__test__tab_characters.snap
---
source: crates/forge_tool/src/patch/apply_v2.rs
expression: actual
---
<!-- INITIAL -->no_tab	has_tab
<!-- REPLACEMENTS -->
<!-- SEARCH -->has_tab
<!-- REPLACE -->replaced
<!-- FINAL -->no_tab	replaced
