crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_v2__test__unicode_characters.snap
---
source: crates/forge_tool/src/patch/apply_v2.rs
expression: actual
---
<!-- INITIAL -->Hello 世界
<!-- REPLACEMENTS -->
<!-- SEARCH -->世界
<!-- REPLACE -->🌍
<!-- FINAL -->Hello 🌍
